html/css/edition.css
/* ... */
.mark-highlight {
	background-color: #fff6a0;
	color: inherit;
	transition: background-color 0.6s ease;
}

.witness-pages {
	/* Occupy the right half of the available space */
	width: 50%;
	margin-left: auto;
	margin-right: 0;
}

.witness-pages .witness-pagination {
	/* Align pagination controls to the left within the right-side container */
	display: flex;
	justify-content: flex-start;
}

.witness-pages .page-links {
	/* Make pagination list expand to full width */
	width: 100%;
	display: flex;
	flex-wrap: nowrap;
}

/* ══════════════════════════════════════════════════════════
   Text-display rules carried over from a.css
   ══════════════════════════════════════════════════════════ */

/* ── Edition text inner layout ── */
.edition-text-inner > * {
    justify-self: center;
    font-family: var(--editor-font-family);
    font-size: 1.4em ;
}

.edition-text-inner :where(p, .versegroup, .title_part, .closer, .imprint) {
    /* inline-size: fit-content;
    max-inline-size: 100%;
    box-sizing: border-box;
    padding-inline: 2.5rem; */
    text-align: left;
}

/* ── Block-level structural elements ── */
.title_part {
    display: block !important;
    margin: 5px !important;
    text-align: center;
}

.catch {
    display: inline-block;
    color: grey;
    text-align: right;
    width: 100%;
    position: relative;
}

.row.fw {
    width: 100%;
    color: grey;
    flex: 1;
}

.row.fw:has(.col:nth-child(3)) .col {
    width: 33.3333%;
}

.row.fw:not(:has(.col:nth-child(3))) .col {
    width: 50%;
}

/* ── Iconographic description ── */
div.icon_desc {
    display: grid;
    justify-content: center;
    align-items: center;
    color: #868277;
    font-style: italic;
    font-size: small;
    margin: .5rem 0 .5rem .5rem;
}

/* ── Variant anchors ── */
a.variant_anchor_link {
    background-color: var(--variant-marker-color);
    border-radius: 6px;
    padding: 0.1rem 0.1rem;
    color: inherit;
    text-decoration: inherit;
}

a.variant_anchor_link:target {
    background-color: grey !important;
}

a.variant_anchor_link:target > * {
    background-color: grey !important;
    color: black !important;
}

a.variant_anchor_link.block_lemma {
    display: block;
    width: fit-content;
}

a.variant_anchor_link.block_lemma.catch {
    position: relative;
    right: var(--catch-offset-right);
}

/* ── Token interaction ── */
span.token {
    position: relative;
}

span.sic span.token+span.token::before {
    content: "\a";
    white-space: pre;
    background-color: red;
}

span.token:hover {
    background-color: aliceblue !important;
}

span.sic span.token::after,
span.token:hover::before {
    font-family: var(--editor-font-family) !important;
    font-style: normal;
    text-indent: 0;
    text-align: left;
    color: var(--editor-font-color) !important;
    font-size: 1rem !important;
    content: 'Lemma: 'attr(lemma)'\A'"POS: "attr(pos)"\Avocabulary: "attr(vocab);
    white-space: pre;
    border: 0.1rem dotted black;
    border-radius: 5px;
    display: inline;
    position: absolute;
    background-color: aliceblue !important;
    z-index: 10000;
    padding: 0.3rem;
    margin: .2rem;
    left: 100%;
    top: 50%;
}

/* ── Empty lemma ── */
span.empty_lemma a.variant_anchor_link::after {
    content: "" !important;
}

span.empty_lemma {
    display: none !important;
}

span.empty_lemma::after {
    content: "" !important;
}

/* ── Image preview ── */
span.image_preview img {
    height: 7rem;
    width: auto;
}

/* ── Structural labels ── */
span.sig {
    width: fit-content;
    display: inline-block;
    color: grey;
    text-align: center;
    position: relative;
}

a.variant_anchor_link.block_lemma.catch > span.catch {
    width: fit-content;
    display: block;
    color: grey;
    text-align: right;
    position: relative;
    right: 0;
    text-indent: 0;
}

span.layer_counter {
    width: 100%;
    display: block;
    color: grey;
    text-align: center;
}

span.page_number {
    width: fit-content;
    display: block;
    position: relative;
    color: darkgrey;
    text-align: left;
    margin-left: 1rem;
}

/* ── Section dividers ── */
*+hr.section_divider {
    padding-bottom: 1.5rem;
}

hr.section_divider {
    width: 10rem;
    margin: auto !important;
    padding-bottom: 1.5rem;
    border-top: solid .3rem;
}

hr.section_divider+hr.section_divider {
    width: 10rem;
    margin: auto;
    border-top: solid .3rem;
}

span.lemma::before {
    content: "↑ ";
}

/* ── Text formatting classes ── */
*.text_align_center {
    display: block;
    text-align: center !important;
    width: 100%;
}

*.antiqua {
    font-family: var(--bs-font-sans-serif, sans-serif) !important;
    font-size: 0.8em;
}

*.majuscule {
    font-size: 150% !important;
}

*.bold {
    font-weight: bold !important;
}

*.italic {
    font-style: italic !important;
}

*.spaced {
    letter-spacing: 0.125em;
}


*.indent {
    display: block;
    margin-left: 0 !important;
    text-indent: 0 !important;
}

*.indent > :first-child {
    margin-left: 2em !important;
}


*.hanging_indent {
    text-indent: -4rem !important;
    padding-left: 4rem !important;
}

*.superscript {
    vertical-align: super !important;
    font-size: 70%;
}


.tei-front,
.tei-body,
.title-page {
    display: block;
    width: 100%;
}

.tei-front {
    margin-bottom: 1rem;
}

.title-page {
    margin: 0 auto 1rem;
}

.tei-body p {
    display: block;
    width: 100%;
    max-width: 40rem;
    margin: 0.5rem auto;
    text-align: left;
    padding: 0 1rem;
}

.tei-figure {
    display: block;
    margin: 1.5rem auto;
    text-align: center;
    width: min(100%, 640px);
}
/* ... */

